# kraken

./: .gitignore  .pyasm  README.md  pyproject.toml
contour/: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  main.py  pyproject.toml
contour/.github/workflows/: ci.yml  release.yml
contour/examples/: evaluate_sem_quality_gates.py  polygon_widget_integration.py
contour/packaging/: ViaLaNetPolygonWidget.iss  ViaLaNetPolygonWidget.spec
contour/polygon_widget/: __init__.py  __main__.py  app.py  batch_processor.py  commands.py  contour_extractor.py  edge_detection.py  graphics_items.py  graphics_view.py  i18n.py  models.py  pipeline.py  serializers.py  signals.py  utils.py  widget.py
contour/polygon_widget/application/: __init__.py  bootstrap.py  cli.py  dto.py  model.py  presenter.py  processing.py  styles.py  view.py  window.py
contour/polygon_widget/domain/: __init__.py  geometry.py  polygon.py
contour/polygon_widget/graphics/: __init__.py  editor_scene.py  geometry.py
contour/polygon_widget/infrastructure/: __init__.py  logging.py  settings_store.py
contour/polygon_widget/ui/: __init__.py  builders.py  editor_icons.py  i18n_content.py  pipeline_list.py  retranslate.py  styles.py  via_presets.py
contour/polygon_widget/vision/: __init__.py  schemas.py
contour/scripts/: build_windows.ps1
contour/tests/: conftest.py
contour/tests/integration/: test_app_startup.py
contour/tests/unit/: test_autotune.py  test_batch_processor.py  test_binary_pipeline_ops.py  test_geometry.py  (+15 more)
contour/vialanet_polygon_widget.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
neuralimage/: .gitignore  NeuralImage.spec  NeuralImageInstaller.iss  ValidationGradientWidgetLite.spec  main.py  main_code_version.example.json  main_code_version.py  main_test.py  manage.py  neuralimage_state.ini  notes.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  rth_torch_dllpaths.py  test.py  tic_tac_toe_ai_state.json  Сравнение нейросетей.docx
neuralimage/UI/: UI_design.py  __init__.py  clickable_label.py  my_ui_elements.py  settings.py
neuralimage/Validation_gradient_widget_lite/: __init__.py  __main__.py
neuralimage/augmentations/: __init__.py  ic_defects.py  pcb_defects.py  synthetic_topology.py  tech_variations.py
neuralimage/bootstrap/: composition_root.py
neuralimage/configs/: frame_unet.example.json  quasi_dual_scale_unet.example.json
neuralimage/controller/: app_controller.py
neuralimage/hooks/: hook-django.py  hook-torch.py  rth_set_workdir.py
neuralimage/infrastructure/: __init__.py
neuralimage/lib/: System.py  backend.py  config.py  data_interfaces.py  error_handlers.py  file_func.py  func.py  image_processing.py  images.py  loss_config.py  message_bus.py  random_artifacts.py  rare_patch_masks.py  runtime_paths.py  sample_fast_cutter_pyx.cp313-win_amd64.pyd  sample_fast_cutter_pyx.py  sample_fast_cutter_pyx.pyx  shared_styles.py  test.py  ui_texts.py  update_checker.py  version.py
neuralimage/model/: __init__.py  config_model.py  general_neural_handler.py  image_workers.py
neuralimage/neuralimage.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
neuralimage/polygon_widget/: __init__.py  __main__.py  app.py  batch_processor.py  commands.py  contour_extractor.py  graphics_items.py  graphics_view.py  i18n.py  models.py  pipeline.py  pipeline_example.json  serializers.py  utils.py  widget.py
neuralimage/presenter/: __init__.py  background_workers.py  dialogs.py  main_presenter.py  plugin_flow.py  sample_counting.py  state_store.py  state_sync.py  task_flow.py  update_flow.py  validation.py  web_presenter.py  workflow_mapper.py
neuralimage/resources/: changelog.md  changelog_en.md  changelog_ru.md  help.md  help_ru.md  ui_texts_en.json  ui_texts_ru.json  update_client.example.json  update_client.json
neuralimage/tests/: conftest.py  general_test.py  helpers.py  image_test.py  test_additional_augmentation_counts.py  test_app_controller_startup.py  test_augmentation_preview_dialog.py  test_backend.py  test_build_linux_target.py  test_config.py  test_config_model.py  test_data_interfaces.py  test_dataset.py  test_dataset_utils.py  test_ddp_runtime_behavior.py  test_empty_mask_losses.py  test_error_handlers.py  test_file_func.py  test_frame_unet_pipeline.py  test_func.py  test_general_handler_dataloader_workers.py  test_general_handler_existing_folder_prompt.py  test_general_handler_multi_gpu.py  test_general_handler_recognition_flow.py  test_general_handler_sample_pairing.py  test_general_handler_transformer_model_kwargs.py  test_help_dialog.py  test_image_processing.py  test_image_workers.py  test_logging_policy.py  test_loss_aware_sampler.py  test_loss_config.py  test_main_presenter_dialog_timer.py  test_main_presenter_task_restore.py  test_main_runtime.py  test_main_view_metrics.py  test_main_view_tic_tac_toe.py  test_message_bus.py  test_model_architecture_regressions.py  test_model_elapsed_time.py  (+43 more)
neuralimage/tools/: build_sample_fast_cutter.py  download_timm_weights.py  generate_uml_class_png.py  generate_uml_repo_png.py  print_model_parameter_counts.py
neuralimage/view/: __init__.py  augmentation_preview_dialog.py  changelog_dialog.py  developer_tools_dialog.py  help_dialog.py  main_window.py  metrics_panel.py  model_settings.py  rare_patch_editor_dialog.py  settings_panel.py  settings_panel_bindings.py  settings_panel_i18n.py  settings_panel_policy.py  settings_panel_widgets.py  task_properties_dialog.py  tic_tac_toe_dialog.py  window_dataclasses.py
neuralimage/webui/: admin.py  forms.py  urls.py  views.py
neuralimage/webui_project/: asgi.py  settings.py  urls.py  wsgi.py
plugins/contour/: README.md  __main__.py  frame_1.cif  pyproject.toml  test.py
plugins/csliser/: README.md  __main__.py  pyproject.toml
plugins/karakal/: README.md  pyproject.toml
plugins/kategb/: README.md  __main__.py  pyproject.toml
plugins/krona/: README.md  __main__.py  pyproject.toml
plugins/neuralimage/: README.md  pyproject.toml
(+665 files in other folders)
