[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vialanet-polygon-widget"
version = "0.1.0"
description = "Standalone polygon extraction and editing widget."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.4.0",
    "opencv-python>=4.13",
    "PyQt6>=6.11",
    "pyinstaller>=6.19",
]

[project.scripts]
polygon-widget = "polygon_widget.application.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = [
    "polygon_widget",
    "polygon_widget.*",
]

[tool.setuptools.package-data]
polygon_widget = [
    "pipeline_example.json",
    "resources/styles/*.qss",
    "resources/styles/icons/*",
]
