[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "csliser"
version = "0.0.0"
description = "Reserved Kraken plugin."
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[project.scripts]
csliser = "csliser.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["csliser", "csliser.*"]
