[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "csliser"
dynamic = ["version"]
description = "Frame-based file copy, move, and cleanup tool."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "kraken",
    "PyQt6>=6.6",
]

[tool.uv.sources]
kraken = { workspace = true }

[project.optional-dependencies]
build = ["pyinstaller>=6.19"]

[project.scripts]
csliser = "csliser.application.cli:main"

[tool.setuptools.dynamic]
version = { attr = "csliser.__version__" }

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["csliser", "csliser.*"]

[tool.setuptools.data-files]
"plugins/csliser/resources/icons" = [
    "resources/icons/csliser.ico",
    "resources/icons/csliser.png",
]

[tool.ruff]
line-length = 120
target-version = "py313"
extend-exclude = ["build", "dist", ".venv", "packaging"]