[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "karakal"
version = "0.0.0"
description = "Reserved Kraken plugin."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=1.26",
    "PyQt6>=6.6",
]

[project.scripts]
karakal = "karakal.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["karakal", "karakal.*"]
