[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "krona"
dynamic = ["version"]
description = "EDIF and netlist viewer plugin for Kraken."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "kraken",
    "PyQt6>=6.6",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-qt>=4.4", "ruff>=0.6"]
build = ["pyinstaller>=6.0"]

[project.scripts]
krona = "krona.__main__:main"

[tool.uv.sources]
kraken = { workspace = true }

[tool.setuptools.packages.find]
where = ["src"]
include = ["krona", "krona.*"]

[tool.setuptools.dynamic]
version = { attr = "krona.version.__version__" }

[tool.setuptools.package-data]
krona = [
    "presentation/qt/*.json",
    "presentation/qt/theme/*.qss",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra"
